# ConversationalLanguageLearning

./: .dockerignore  .env.example  .gitignore  Dockerfile  FIXES_IMPLEMENTED.md  Französisch_Grammatik_Tracker-2.xlsx  GAMIFICATION_ENHANCEMENTS.md  README.md  alembic.ini  celerybeat-schedule  check_stories.py  content-pipeline-gutenberg.md  create_tables.py  fix_db.py  jest.config.js  jest.setup.ts  package.json  petit-prince-prototype.md  pyproject.toml  response.json  restore_db.py  rpg-feature-documentation.md  seed_grammar.py  start-backend.sh  start-celery.sh  start-frontend.sh  test_image_gen.py  tsconfig.json  upload_moby_dick_task.py  vocabulary_fr_sample.csv
alembic/: env.py  script.py.mako
app/: __init__.py  celery_app.py  config.py  main.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  entrypoint.sh
docs/: ATELIER_AI_FIRST_GENERATION_PLAN.md  ATELIER_CONTENT_BANK_PLAN.md  ATELIER_CONTENT_QUALITY_GATE_PLAN.md  ATELIER_EXERCISE_FIX_PLAN.md  ATELIER_FIRST_15_SECONDS_PLAN.md  ATELIER_FORMS_AND_REWARD_PLAN.md  ATELIER_LANGUAGE_ASSET_RECIPE.md  ATELIER_LEARNING_LOOP_PLAN.md  ATELIER_MODES_INTEGRATION_PLAN.md  ATELIER_REWARD_ECONOMY_PLAN.md  ATELIER_ROADMAP.md  ATELIER_SERIAL_WORLD_ADOPTION_PLAN.md  ATELIER_UIUX_OVERHAUL_PLAN.md  AUDIO_ONLY_MODE_SPEC.md  FEATURE_IDEAS.md  FEATURE_IDEAS.md.bak  MISSIONS_OVERHAUL_PLAN.md  MISSIONS_VOCAB_PLAN.md  atelier-home-rework-design-brief.md  french_grammar_ai_tutor_prompt.md  french_grammar_srs_blueprint.md  future-feature-ideas.md.bak  implementation_plan.md  master-roadmap.md  (+18 more)
(+559 files in other folders)
