[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conversational-language-learning"
version = "0.1.0"
description = "Backend service for Conversational Language Learning application"
authors = [{name = "Conversational Language Learning Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.23",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "psycopg2-binary>=2.9",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "celery>=5.3",
    "redis>=5.0",
    "flower>=2.0",
    "httpx>=0.25",
    "tenacity>=8.2",
    "orjson>=3.9",
    "python-multipart>=0.0.6",
    "spacy>=3.7",
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "faker>=19.6",
    "httpx>=0.25",
    "ruff>=0.1",
    "locust>=2.20"
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "A", "C4", "TID"]
ignore = ["E203", "E266", "E501"]
